baseline, add and list stations

--- a/views/partials/add-stations.hbs
+++ b/views/partials/add-stations.hbs
@@ -1,4 +1,4 @@
-<form action="/dashboard/addplaylist" method="POST">
+<form action="/dashboard/addobject" method="POST">
   <div class="field">
     <label class="label">Station Title</label>
     <input class="input" type="text" placeholder="Enter Station title" name="title">
