--- a/views/about-view.hbs
+++ b/views/about-view.hbs
@@ -2,9 +2,9 @@
 
 <section class="box is-3 has-text-centered">
   <h3 class="title">
-    Template Application
+    WeatherTop
   </h3>
   <div class="section">
-    Description of the app here...
+    Weather Station App - Monitor latest weather station readings
   </div>
 </section>
