--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Weather station app, weather station readings">
+  <meta name="keywords" content="Weather">
+  <meta name="author" content="Gediminas Andrukonis">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{title}}</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
