--- a/views/partials/brand.hbs
+++ b/views/partials/brand.hbs
@@ -1,8 +1,7 @@
 <div class="title p-3 is-flex">
-  <svg width="44" height="44" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-    <path
-      d="M7.247 22H5.796a3.797 3.797 0 0 1-2.775-6.39l1.135-1.217a3.059 3.059 0 0 0-.073-4.248L2.969 9.03a.75.75 0 0 1 1.06-1.06l1.114 1.114a4.558 4.558 0 0 1 .11 6.332l-1.136 1.217a2.3 2.3 0 0 0 1.68 3.867h.677c-.003-.285-.001-.634.012-1.033.036-1.083.157-2.542.5-4.012.34-1.462.915-2.996 1.899-4.177.872-1.047 2.055-1.801 3.61-1.985V5.15A3.15 3.15 0 0 1 15.641 2c.746 0 1.35.604 1.35 1.35V4h1.636c.95 0 1.834.492 2.335 1.3l.62 1c1.092 1.763-.084 4.02-2.093 4.19v9.26A2.25 2.25 0 0 1 17.242 22h-.75v-2.25A3.749 3.749 0 0 0 12.744 16h-1.25a.75.75 0 0 0 0 1.5h1.25a2.25 2.25 0 0 1 2.249 2.25V22H7.247Z"
-      fill="#1CA085" />
+  <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+    <g fill="none" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><circle cx="12" cy="32" r="6"><animate fill="freeze" attributeName="cy" dur="0.6s" values="32;12"/></circle><g>
+    <path stroke-dasharray="2" stroke-dashoffset="2" d="M12 19v1M19 12h1M12 5v-1M5 12h-1"><animate fill="freeze" attributeName="d" begin="0.7s" dur="0.2s" values="M12 19v1M19 12h1M12 5v-1M5 12h-1;M12 21v1M21 12h1M12 3v-1M3 12h-1"/><animate fill="freeze" attributeName="stroke-dashoffset" begin="0.7s" dur="0.2s" values="2;0"/></path><path stroke-dasharray="2" stroke-dashoffset="2" d="M17 17l0.5 0.5M17 7l0.5 -0.5M7 7l-0.5 -0.5M7 17l-0.5 0.5"><animate fill="freeze" attributeName="d" begin="0.9s" dur="0.2s" values="M17 17l0.5 0.5M17 7l0.5 -0.5M7 7l-0.5 -0.5M7 17l-0.5 0.5;M18.5 18.5l0.5 0.5M18.5 5.5l0.5 -0.5M5.5 5.5l-0.5 -0.5M5.5 18.5l-0.5 0.5"/><animate fill="freeze" attributeName="stroke-dashoffset" begin="0.9s" dur="0.2s" values="2;0"/></path><animateTransform attributeName="transform" dur="30s" repeatCount="indefinite" type="rotate" values="0 12 12;360 12 12"/></g></g>
   </svg>
-  <div class="ml-4">Template Application 1.0</div>
+  <div class="ml-4">WeatherTop</div>
 </div>
