--- a/views/partials/list-stations.hbs
+++ b/views/partials/list-stations.hbs
@@ -1,7 +1,9 @@
 {{#each objects}}
 <div class="box box-link-hover-shadow">
   <h2 class="title">
-    {{title}}
+    <a href="/object/{{_id}}">
+      {{title}}
+    </a>
   </h2>
 </div>
 {{/each}}
