--- a/views/partials/list-reports.hbs
+++ b/views/partials/list-reports.hbs
@@ -26,6 +26,11 @@
       <td>
         {{pressure}}
       </td>
+      <td>
+        <a href="/object/{{../object._id}}/deletereport/{{_id}}" class="button">
+          {{>icons/delete}}
+        </a>
+      </td>
     </tr>
     {{/each}}
   </tbody>
