baseline, add image, style buttons

--- a/views/about-view.hbs
+++ b/views/about-view.hbs
@@ -1,10 +1,17 @@
 {{> menu active="about"}}
 
 <section class="box is-3 has-text-centered">
-  <h3 class="title">
-    WeatherTop
-  </h3>
-  <div class="section">
-    Weather Station App - Monitor latest weather station readings
+  <div class="columns">
+    <div class="column">
+      <h3 class="title">
+        WeatherTop
+      </h3>
+      <h4>
+        Weather Station App - Monitor latest weather station readings
+      </h4>
+    </div>
+    <div class="column">
+      <img src="https://cdn.glitch.global/ececab76-aa50-478a-b365-bdce96014dc3/image-about.jpg?v=1725103216205" alt="figure presenting weather"> 
+    </div>
   </div>
 </section>
