--- a/views/partials/add-report.hbs
+++ b/views/partials/add-report.hbs
@@ -19,5 +19,5 @@
       </div>
     </div>
   </div>
-  <button class="button is-primary">Add Report</button>
+  <button class="button is-black">Add Report</button>
 </form>
