--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -6,9 +6,9 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a id="dashboard" class="button" href="/dashboard"> Dashboard </a>
-          <a id="about" class="button" href="/about"> About </a>
-          <a id="logout" class="button" href="/logout"> Logout </a>
+          <a id="dashboard" class="button is-link" href="/dashboard"> Dashboard </a>
+          <a id="about" class="button is-link" href="/about"> About </a>
+          <a id="logout" class="button is-danger" href="/logout"> Logout </a>
         </div>
       </div>
     </div>
@@ -16,5 +16,5 @@
 </nav>
 
 <script>
-  document.getElementById("{{active}}").classList.add("is-primary");
+  document.getElementById("{{active}}").classList.add("is-link");
 </script>
