--- a/views/partials/add-stations.hbs
+++ b/views/partials/add-stations.hbs
@@ -3,5 +3,5 @@
     <label class="label">Station Title</label>
     <input class="input" type="text" placeholder="Enter Station title" name="title">
   </div>
-  <button class="button is-link">Add Station</button>
+  <button class="button is-black">Add Station</button>
 </form>
