baseline 1, report form update, labels added

--- a/views/partials/add-report.hbs
+++ b/views/partials/add-report.hbs
@@ -1,21 +1,35 @@
 <form class="box" action="/object/{{object._id}}/addreport" method="POST">
-  <label>Enter Report Details:</label>
   <div class="field is-horizontal">
     <div class="field-body">
       <div class="field">
-        <input class="input" type="text" placeholder="Enter Code" name="code">
+        <label class="label">Code</label>
+        <div class="control">
+        <input class="input" type="text" placeholder="00" name="code">
+        </div>
       </div>
       <div class="field">
-        <input class="input" type="text" placeholder="Enter Temp" name="temp">
+        <label class="label">Temperature</label>
+        <div class="control">
+        <input class="input" type="text" placeholder="0.00C" name="temp">
+        </div>
       </div>
       <div class="field">
-        <input class="input" type="text" placeholder="Enter Wind Speed" name="windSpeed">
+        <label class="label">Wind Speed</label>
+        <div class="control">
+        <input class="input" type="text" placeholder="00.00kMh" name="windSpeed">
+        </div>
       </div>
       <div class="field">
-        <input class="input" type="text" placeholder="Enter Wind Direction" name="windDirection">
+        <label class="label">Wind Direction</label>
+        <div class="control">
+        <input class="input" type="text" placeholder="000deg" name="windDirection">
+        </div>
       </div>
       <div class="field">
-        <input class="input" type="text" placeholder="Enter Pressure" name="pressure">
+        <label class="label">Pressure</label>
+        <div class="control">
+        <input class="input" type="text" placeholder="000hPa" name="pressure">
+        </div>
       </div>
     </div>
   </div>
