--- a/views/login-view.hbs
+++ b/views/login-view.hbs
@@ -4,13 +4,28 @@
   <h1 class="title">Log in</h1>
   <form action="/authenticate" method="POST">
     <div class="field">
-      <label class="label">Email</label> <input class="input" type="text" placeholder="Enter email" name="email">
+      <p class="control has-icons-left has-icons-right">
+      <input class="input" type="text" placeholder="Enter Email" name="email">
+       <span class="icon is-small is-left">
+        <i class="fas fa-envelope"></i>
+      </span>
+      <span class="icon is-small is-right">
+        <i class="fas fa-check"></i>
+      </span>
+      </p>
     </div>
     <div class="field">
-      <label class="label">Password</label> <input class="input" type="password" placeholder="Enter Password" name="password">
+      <p class="control has-icons-left">
+      <input class="input" type="password" placeholder="Enter Password" name="password">
+      <span class="icon is-small is-left">
+        <i class="fas fa-lock"></i>
+      </span>
+      </p>
     </div>
-    <div class="field is-grouped">
+    <div class="field">
+    <p class="control">
       <button class="button is-black">Submit</button>
+    </p>
     </div>
   </form>
 </section>
