fix active button at menu nav

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -6,8 +6,8 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a id="dashboard" class="button is-link" href="/dashboard"> Dashboard </a>
-          <a id="about" class="button is-link" href="/about"> About </a>
+          <a id="dashboard" class="button is-light" href="/dashboard"> Dashboard </a>
+          <a id="about" class="button is-light" href="/about"> About </a>
           <a id="logout" class="button is-danger" href="/logout"> Logout </a>
         </div>
       </div>
