--- a/views/partials/add-stations.hbs
+++ b/views/partials/add-stations.hbs
@@ -1,7 +1,25 @@
 <form action="/dashboard/addobject" method="POST">
-  <div class="field">
-    <label class="label">Station Title</label>
-    <input class="input" type="text" placeholder="Enter Station title" name="title">
+<div class="field is-horizontal">
+    <div class="field-body">
+      <div class="field">
+        <label class="label">Station Title</label>
+        <div class="control">
+        <input class="input" type="text" placeholder="Enter Station title" name="title">
+        </div>
+      </div>
+      <div class="field">
+        <label class="label">Latitude</label>
+        <div class="control">
+        <input class="input" type="text" placeholder="Enter Latitude" name="latitude">
+        </div>
+      </div>
+      <div class="field">
+        <label class="label">Longitude</label>
+        <div class="control">
+        <input class="input" type="text" placeholder="Enter Longitude" name="longitude">
+        </div>
+      </div>
+    </div>
   </div>
   <button class="button is-black">Add Station</button>
 </form>
