style update, table borders, box class

--- a/views/login-view.hbs
+++ b/views/login-view.hbs
@@ -1,6 +1,6 @@
 {{> welcome-menu active="login"}}
 
-<section class="section">
+<section class="box">
   <div class="columns">
     <div class="column">
     <h1 class="title">Log in</h1>
