--- a/views/object-view.hbs
+++ b/views/object-view.hbs
@@ -1,6 +1,6 @@
-{{> menu}}
+{{> menu active="dashboard"}}
 
-<section class="section">
+<section class="box">
   <div class="title">
     {{object.title}}
   </div>
