--- a/views/partials/add-stations.hbs
+++ b/views/partials/add-stations.hbs
@@ -1,4 +1,4 @@
-<form action="/dashboard/addobject" method="POST">
+<form class="box" action="/dashboard/addobject" method="POST">
 <div class="field is-horizontal">
     <div class="field-body">
       <div class="field">
