--- a/views/partials/list-reports.hbs
+++ b/views/partials/list-reports.hbs
@@ -1,4 +1,4 @@
-<table class="table is-fullwidth">
+<table class="table is-bordered is-fullwidth is-hoverable">
   <thead>
     <tr>
       <th>Code</th>
@@ -6,6 +6,7 @@
       <th>Wind Speed</th>
       <th>Wind Direction</th>
       <th>Pressure</th>
+      <th>Action</th>
     </tr>
   </thead>
   <tbody>
