--- a/views/partials/list-stations.hbs
+++ b/views/partials/list-stations.hbs
@@ -1,9 +1,10 @@
-<table class="table is-fullwidth">
+<table class="table is-bordered is-fullwidth is-hoverable">
   <thead>
     <tr>
       <th>Station Title</th>
       <th>Latitude</th>
       <th>Longitude</th>
+      <th>Action</th>
     </tr>
   </thead>
   <tbody>
