--- a/views/signup-view.hbs
+++ b/views/signup-view.hbs
@@ -1,6 +1,6 @@
 {{> welcome-menu active="signup"}}
 
-<section class="section">
+<section class="box">
   <div class="columns">
    <div class="column">
       <img src="https://cdn.glitch.global/ececab76-aa50-478a-b365-bdce96014dc3/image-about.jpg?v=1725103216205" alt="figure presenting weather"> 
