--- a/views/dashboard-view.hbs
+++ b/views/dashboard-view.hbs
@@ -1,6 +1,9 @@
 {{> menu active="dashboard"}}
 
-<section class="section">
+<section class="box">
+  <div class="title">
+    Dashboard
+  </div>
   {{> list-stations}}
   {{> add-stations}}
 </section>
