--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -8,6 +8,7 @@
         <div class="buttons">
           <a id="dashboard" class="button is-light" href="/dashboard"> Dashboard </a>
           <a id="about" class="button is-light" href="/about"> About </a>
+          <a id="api" class="button is-danger is-light" href="/api"> API </a>
           <a id="logout" class="button is-danger" href="/logout"> Logout </a>
         </div>
       </div>
