--- a/views/partials/brand.hbs
+++ b/views/partials/brand.hbs
@@ -1,5 +1,7 @@
 <div class="title p-3 is-flex">
   {{>icons/logo}}
   <div class="ml-4">WeatherTop</div>
-  <div class="ml-2 is-size-7">Services Inc.</div>
+  <div class="ml-2 is-size-7">Services Inc.
+    <br>{{object.title}}
+  </div>
 </div>
