--- a/views/partials/card-view.hbs
+++ b/views/partials/card-view.hbs
@@ -51,7 +51,7 @@
       <div class="card-content">
         <div class="content">
           <p>
-            Min: TBD
+            Min: {{minTemperature.temp}}
             <br>
             Max: TBD
           </p>
