--- a/views/partials/card-view.hbs
+++ b/views/partials/card-view.hbs
@@ -53,7 +53,7 @@
           <p>
             Min: {{minTemperature.temp}}
             <br>
-            Max: TBD
+            Max: {{maxTemperature.temp}}
           </p>
           
         </div>
