--- a/views/partials/card-view.hbs
+++ b/views/partials/card-view.hbs
@@ -72,9 +72,9 @@
       <div class="card-content">
         <div class="content">
           <p>
-            Min: TBD
+            Min: {{minWind.windSpeed}}
             <br>
-            Max: TBD
+            Max: {{maxWind.windSpeed}}
           </p>
           
         </div>
@@ -93,9 +93,9 @@
       <div class="card-content">
         <div class="content">
           <p>
-            Min: TBD
+            Min: {{minPressure.pressure}}
             <br>
-            Max: TBD
+            Max: {{maxPressure.pressure}}
           </p>
           
         </div>
